<resources>
    <string name="facebook_app_id">1899240990820663</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1899240990820663</string>
    <string name="your_web_client_id">836432747588–26iv4k8po8il5h2j80gl6oiaa6jk1pp4.apps.googleusercontent.com</string>
  <string name="facebook_client_token">3989b6db92ec67fa729b26f10bfd0925</string>
      
  <string name="web_client_id">836432747588–3u0gpe8vh1ghvufqnth3lr39pn3mohee.apps.googleusercontent.com</string>
    <string name="sign_in">Sign in</string>
    <string name="email">E-mail</string>
    <string name="letsgo">Let\'s go!</string>
    <string name="app_name">PhotoQuestv3</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="biography">Biography</string>
    <string name="e_mail">E-mail</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="sign_up">Sign up</string>
    <string name="very_unique_waste_containers">Very unique waste containers</string>
    <string name="trash_image">trash_image</string>
    <string name="more">more</string>
    <string name="comment_section">comment_section</string>
    <string name="userprofile">userProfile</string>
    <string name="caption">Caption</string>
    <string name="create_post">Create Post</string>
    <string name="select_image">Select image</string>
    <string name="new_post">New Post</string>
    <string name="postimage">postImage</string>
    <string name="family">family</string>
    <string name="forgotpassword">Forgot password?</string>
    <string name="Challenges">Challenges</string>
    <string name="password">Password</string>
    <string name="sign_out">Sign out</string>
    <string name="todays_challenge_is">Today\'s challenge is...</string>
    <string name="daily_challenge">Daily challenge</string>
    <string name="leave_a_comment">Leave a comment...</string>
    <string name="profile_picture">Profile_Picture</string>
    <string name="a_comment_has_been_made">A comment has been made</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="your_post_is_liked_by">Likes</string>
    <string name="upload_image">Upload image</string>
    <string name="delete_account">Delete account</string>
    <string name="update">UPDATE</string>
    <string name="dummy_text">dummy text</string>
    <string name="your_story_here">Your story here</string>
    <string name="change_language">CHANGE LANGUAGE</string>
    <string name="please_enter_comment">Please enter a comment</string>
    <string name="failed_to_add_comment">Failed to add comment</string>
    <string name="comment_updated">Comment updated</string>
    <string name="failed_to_update_comment">Failed to update comment</string>
    <string name="comment_deleted">Comment deleted</string>
    <string name="failed_to_delete_comment">Failed to delete comment</string>
    <string name="only_delete_own_comments">You can only delete your own comments</string>
    <string name="edit_comment">Edit Comment</string>
    <string name="update_lowercase">Update</string>
    <string name="cancel">Cancel</string>
    <string name="edit_post">Edit Post</string>
    <string name="post_updated">Post updated</string>
    <string name="failed_update_post">Failed to update post</string>
    <string name="enter_new_text">Please enter new text</string>
    <string name="no_challenges_available">No challenges available.</string>
    <string name="fb_login_cancelled">Facebook login cancelled.</string>
    <string name="fb_login_error">Facebook login error: %1$s</string>
    <string name="fb_auth_failed">Facebook authentication failed.</string>
    <string name="fb_auth_success">Facebook authentication successful.</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_user">Welcome! %1$s</string>
    <string name="all_fields_required">All fields are required!</string>
    <string name="login_failed">Login failed..</string>
    <string name="mail_sent">Mail sent!</string>
    <string name="oops_error">Ooops: %1$s</string>
    <string name="enter_valid_email">Enter a valid email-address</string>
    <string name="post_upload_success">Successfully Uploaded Post!</string>
    <string name="error_upload_post">Error</string>
    <string name="enter_text_and_picture">Please Enter a text and a picture!</string>
    <string name="account_successfully_deleted">Account successfully deleted</string>
    <string name="error_deleting_account">Error deleting account</string>
    <string name="profile_updated">Profile updated</string>
    <string name="failed_update_profile">Failed to update profile: %1$s</string>
    <string name="name_updated">Name updated</string>
    <string name="failed_update_name">Failed to update name: %1$s</string>
    <string name="username_updated">Username updated</string>
    <string name="failed_update_username">Failed to update username: %1$s</string>
    <string name="biography_updated">Biography updated</string>
    <string name="failed_update_biography">Failed to update biography: %1$s</string>
    <string name="nothing_to_update">Nothing to update</string>
    <string name="failed_upload_image">Failed to upload image: %1$s</string>
    <string name="please_select_picture">Please select a picture!</string>
    <string name="account_not_created">Account not created..</string>
    <string name="successfully_added_like">Successfully added a like!</string>
    <string name="already_liked">Already liked</string>
    <string name="hello">Hello</string>
    <string name="do_you_want_to_delete_this_account">Do you want to delete this account?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="edit_others_description">You can not edit others posts!</string>

</resources>