<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="4dp"
    app:cardElevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            android:layout_marginEnd="10dp"
            >

        <ImageView
            android:id="@+id/imageProfile"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/photoquest_profile_black"
            android:scaleType="centerCrop"
            android:contentDescription="@string/profile_picture" />

        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textStyle="bold"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/textComment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a_comment_has_been_made"
                android:textStyle="normal"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <ImageView
            android:id="@+id/icon_heart"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_heart"
            android:contentDescription="@string/more"
            android:visibility="gone"
            />
    </LinearLayout>
</androidx.cardview.widget.CardView>