<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Views.Fragments.PostFragment"
    android:padding="8dp"
    android:background="@drawable/background_gradient"
    >

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_post"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

  <ImageView
      android:id="@+id/selectedImage"
      android:layout_width="match_parent"
      android:layout_height="200dp"
      android:contentDescription="@string/family"
      android:scaleType="centerCrop"
      app:layout_constraintTop_toBottomOf="@id/textTitle"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:src="@drawable/family"
      android:layout_marginTop="20dp"
      />

    <EditText
        android:id="@+id/textDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="string"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/selectedImage"
        android:background="@drawable/et_border"
        android:hint="@string/caption"
        android:layout_marginTop="80dp"/>

    <Button
        android:id="@+id/post_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/create_post"
        android:background="@drawable/background_gradient"
        android:layout_marginTop="80dp"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/post_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="gone"/>

    <Button
        android:id="@+id/select_image_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/post_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/select_image"
        android:background="@drawable/background_gradient"
        android:layout_marginTop="20dp"/>

  <androidx.cardview.widget.CardView
      android:id="@+id/daily_challenge_cardView"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      app:contentPadding="10dp"
      app:cardBackgroundColor="@android:color/transparent"
      app:cardCornerRadius="10dp"
      app:cardElevation="2dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/select_image_button">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

      <TextView
          android:id="@+id/daily_challenge_post_tv"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:maxLines="2"
          android:text="@string/daily_challenge"
          android:textSize="20sp"
          android:layout_weight="1"
          android:layout_gravity="top"
          android:layout_marginStart="10dp"
           />

      <CheckBox
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/challenge_checkbox"
          android:layout_gravity="top"

          />

    </LinearLayout>

  </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>