<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_centerVertical="true"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp">


    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/sign_in"
        android:fontFamily="@font/impetus"
        android:textSize="30sp"
        android:textColor="#99000000"
        android:includeFontPadding="false">
    </TextView>

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusBottomStart="0sp"
        app:boxCornerRadiusBottomEnd="0sp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxCornerRadiusTopStart="0sp"
        app:boxCornerRadiusTopEnd="0sp"
        app:boxCornerRadiusBottomStart="0sp"
        app:boxCornerRadiusBottomEnd="0sp"
        app:passwordToggleEnabled="true"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_login"
        android:elevation="0dp"
        android:text="@string/letsgo"
        android:textSize="18sp"
        android:fontFamily="@font/impetus_heavy"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_gradient"
        android:stateListAnimator="@null"
        android:textAllCaps="false"
        />

    <ProgressBar
        android:layout_marginTop="15dp"
        android:id="@+id/progress_bar_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgotpassword"
        android:textAlignment="center" />



    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.facebook.login.widget.LoginButton
            android:id="@+id/fbLoginButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="15dp" />

        <ImageButton

            android:id="@+id/googleSignInButton"
            android:layout_margin="15dp"
            android:layout_width="40dp"
            android:layout_height="40dp"
           android:background="@drawable/google" />

        <ImageButton
            android:id="@+id/AppleSignInButton"
            android:layout_margin="15dp"
            android:layout_width="40dp"
            android:layout_height="40dp"
          android:background="@drawable/apple" />
    </LinearLayout>

</LinearLayout>