<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="15dp"
    android:id="@+id/itemCardView"
    app:cardCornerRadius="16dp"
    app:cardElevation="0dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

  <com.facebook.shimmer.ShimmerFrameLayout
      android:id="@+id/shimmerFrame"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:shimmer_auto_start="true"
      app:shimmer_duration="1000"
      >

      <LinearLayout
          android:id="@+id/feedContent"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical">


          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal"
              android:padding="8dp"
              android:gravity="center_vertical">

              <androidx.cardview.widget.CardView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  app:cardCornerRadius="20dp"
                  android:layout_marginEnd="10dp">
                  <ImageView
                      android:background="@drawable/background_gradient"
                      android:layout_width="40dp"
                      android:layout_height="40dp"
                      android:scaleType="centerCrop"
                      android:contentDescription="@string/userprofile"/>
              </androidx.cardview.widget.CardView>

              <TextView
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:background="@drawable/background_gradient"
                  android:textStyle="bold"
                  android:layout_weight="1"
                  android:textSize="16sp"/>

              <ImageView
                  android:layout_width="24dp"
                  android:layout_height="24dp"
                 android:background="@drawable/background_gradient"
                  android:scaleType="centerCrop"
                  android:contentDescription="@string/more"/>
          </LinearLayout>


          <FrameLayout
              android:layout_width="match_parent"
              android:layout_height="200dp">

              <ImageView
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:contentDescription="@string/trash_image"
                  android:background="@drawable/background_gradient"
                  android:scaleType="centerCrop"/>

              <com.airbnb.lottie.LottieAnimationView
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:visibility="gone"
                  app:lottie_autoPlay="false"
                  app:lottie_loop="false"
                  app:lottie_rawRes="@raw/heartanim1"/>
          </FrameLayout>


          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal"
              android:layout_marginStart="10dp"
              android:layout_marginTop="10dp">

              <FrameLayout
                  android:layout_width="24dp"
                  android:layout_height="24dp"
                  android:layout_marginEnd="10dp"
                  >

                  <ImageView
                      android:layout_width="24dp"
                      android:layout_height="24dp"
                      android:contentDescription="@string/trash_image"
                      android:background="@drawable/background_gradient"
                      />
              </FrameLayout>

              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginEnd="30dp"
                  android:background="@drawable/background_gradient"
                  />

              <ImageView
                  android:layout_width="24dp"
                  android:layout_height="24dp"
                  android:contentDescription="@string/comment_section"
                 android:background="@drawable/background_gradient"
                  />


          </LinearLayout>

          <TextView

              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@drawable/background_gradient"
              android:padding="8dp"/>
      </LinearLayout>
  </com.facebook.shimmer.ShimmerFrameLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            android:gravity="center_vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="20dp"
                android:layout_marginEnd="10dp">
                <ImageView
                    android:id="@+id/profileImage"
                    android:src="@drawable/ic_person"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/userprofile"/>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/userName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textStyle="bold"
                android:layout_weight="1"
                android:textSize="16sp"/>

            <ImageView
                android:id="@+id/moreOptions"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_vert"
                android:scaleType="centerCrop"
                android:contentDescription="@string/more"/>
        </LinearLayout>


        <FrameLayout
            android:id="@+id/imageContainer"
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <ImageView
                android:id="@+id/imagePost"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/trash_image"
                android:background="@drawable/background_gradient"
                android:scaleType="centerCrop"/>

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/heartAnim"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                app:lottie_autoPlay="false"
                app:lottie_loop="false"
                app:lottie_rawRes="@raw/heartanim1"/>
        </FrameLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp">

                <FrameLayout
                    android:id="@+id/heartFrame"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="10dp"
                    >

                    <ImageView
                        android:id="@+id/likeIcon"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:contentDescription="@string/trash_image"
                        android:src="@drawable/photoquest_heart_icon_outline"
                        />
                </FrameLayout>

            <TextView
                android:id="@+id/likeCounter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:text="0"
                />

                <ImageView
                    android:id="@+id/addComment"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/comment_section"
                    android:src="@drawable/photoquest_comment_icon_outline"
                    />


        </LinearLayout>

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/very_unique_waste_containers"
            android:padding="8dp"/>
    </LinearLayout>
     </FrameLayout>
</androidx.cardview.widget.CardView>
